--- a/main.css
+++ b/main.css
@@ -33,9 +33,9 @@ img {
 #scrollable-area {
     top: 0;
     left: 0;
-    z-index: 10;
-    width: 100vw;
-    height: 100vh;
+    z-index: 0;
+    max-width: 100vw;
+    max-height: 100vh;
     overflow: auto;
     position: absolute;
     transition: filter .3s;
