--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@ img {
     top: 0;
     left: 0;
     z-index: 0;
-    max-width: 100vw;
+    max-width: 100%;
     max-height: 100vh;
     overflow: auto;
     position: absolute;
