--- a/main.css
+++ b/main.css
@@ -34,9 +34,9 @@ img {
     top: 0;
     left: 0;
     z-index: 0;
-    max-width: 100%;
-    max-height: 100vh;
-    overflow: auto;
+    width: 100vw;
+    height: 100vh;
+    overflow: scroll;
     position: absolute;
     transition: filter .3s;
     overscroll-behavior-y: none;
