--- a/main.css
+++ b/main.css
@@ -36,7 +36,7 @@ img {
     z-index: 0;
     width: 100vw;
     height: 100vh;
-    overflow: scroll;
+    /*overflow: scroll;*/
     position: absolute;
     transition: filter .3s;
     overscroll-behavior-y: none;
