--- a/sliding_overlay.css
+++ b/sliding_overlay.css
@@ -5,25 +5,22 @@
     width: 100vw;
     height: 100vh;
     display: flex;
+    position: fixed;
     background: #fff;
     overflow: hidden;
     justify-content: center;
-    position: fixed;
     transform: translateX(0);
     animation: translation .3s;
 }
 
 #sliding-overlay #sliding-overlay-wrapper {
-    overflow-y: auto;
     width: 90%;
+    margin-top: 23px;
+    overflow-y: auto;
     position: relative;
 }
 
-/*#sliding-overlay #sliding-overlay-wrapper #*/
-
 #sliding-overlay #sliding-overlay-wrapper #back-button {
-    top: 27px;
-    left: 25px;
     width: 50px;
     height: 50px;
     display: flex;
@@ -38,11 +35,75 @@
     box-shadow: 0 2px 4px 3px rgba(0, 0, 0, 0.07);
 }
 
+#sliding-overlay #sliding-overlay-wrapper .brief-channel {
+    width: 60%;
+    display: flex;
+    margin: 47px auto;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+
+#sliding-overlay #sliding-overlay-wrapper .brief-channel #icon {
+    width: 150px;
+    height: 150px;
+    overflow: hidden;
+    border-radius: 50%;
+    background: #f3f3f3;
+    box-shadow: 0 1px 20px rgba(0, 0, 0, 0.1);
+}
+#sliding-overlay #sliding-overlay-wrapper .brief-channel #icon img {
+    width: 100%;
+    height: 100%;
+}
+
+#sliding-overlay #sliding-overlay-wrapper .brief-channel h3 {
+    font-size: 34px;
+    margin-top: 15px;
+    margin-bottom: 5px;
+    font-family: "SFCompactRoundedBold", sans-serif;
+}
+
+#sliding-overlay #sliding-overlay-wrapper .brief-channel p {
+    font-size: 16px;
+    font-weight: 600;
+}
+
 #sliding-overlay #sliding-overlay-wrapper #back-button p {
     margin-top: -2px;
     margin-left: -2px;
 }
 
+#sliding-overlay #sliding-overlay-wrapper .sliding-tabs {
+    display: flex;
+    font-size: 22px;
+    margin-bottom: 30px;
+    font-variant: small-caps;
+    justify-content: space-between;
+}
+
+#sliding-overlay #sliding-overlay-wrapper .sliding-tabs .active {
+    font-weight: 600;
+    position: relative;
+}
+
+#sliding-overlay #sliding-overlay-wrapper .sliding-tabs .active::after {
+    content: "";
+    width: 100%;
+    height: 2.5px;
+    border-radius: 5px;
+    bottom: -3.5px;
+    left: 0;
+    background: #000;
+    position: absolute;
+}
+
+#sliding-overlay #sliding-overlay-wrapper .tab-content p {
+    font-size: 23px;
+    font-weight: 500;
+}
 
 @keyframes translation {
     0% {
