--- a/sliding_overlay.css
+++ b/sliding_overlay.css
@@ -1,4 +1,4 @@
-#sliding-overlay {
+.sliding-overlay {
     top: 0;
     left: 0;
     z-index: 100;
@@ -9,17 +9,16 @@
     background: #fff;
     overflow: hidden;
     justify-content: center;
-    transform: translateX(0);
-    animation: translation .3s;
+    transform: translateX(100vw);
 }
 
-#sliding-overlay #sliding-overlay-wrapper {
+.sliding-overlay .sliding-overlay-wrapper {
     width: 90%;
     margin-top: 23px;
     position: relative;
 }
 
-#sliding-overlay #sliding-overlay-wrapper #back-button {
+.sliding-overlay .sliding-overlay-wrapper .back-button {
     width: 50px;
     height: 50px;
     display: flex;
@@ -34,7 +33,7 @@
     box-shadow: 0 2px 4px 3px rgba(0, 0, 0, 0.07);
 }
 
-#sliding-overlay #sliding-overlay-wrapper .brief-channel {
+.sliding-overlay .sliding-overlay-wrapper .brief-channel {
     width: 60%;
     display: flex;
     margin: 47px auto;
@@ -45,7 +44,7 @@
 }
 
 
-#sliding-overlay #sliding-overlay-wrapper .brief-channel #icon {
+.sliding-overlay .sliding-overlay-wrapper .brief-channel div {
     width: 150px;
     height: 150px;
     overflow: hidden;
@@ -53,29 +52,29 @@
     background: #f3f3f3;
     box-shadow: 0 1px 20px rgba(0, 0, 0, 0.1);
 }
-#sliding-overlay #sliding-overlay-wrapper .brief-channel #icon img {
+.sliding-overlay .sliding-overlay-wrapper .brief-channel div img {
     width: 100%;
     height: 100%;
 }
 
-#sliding-overlay #sliding-overlay-wrapper .brief-channel h3 {
+.sliding-overlay .sliding-overlay-wrapper .brief-channel h3 {
     font-size: 34px;
     margin-top: 15px;
     margin-bottom: 5px;
     font-family: "SFCompactRoundedBold", sans-serif;
 }
 
-#sliding-overlay #sliding-overlay-wrapper .brief-channel p {
+.sliding-overlay .sliding-overlay-wrapper .brief-channel p {
     font-size: 16px;
     font-weight: 600;
 }
 
-#sliding-overlay #sliding-overlay-wrapper #back-button p {
+.sliding-overlay .sliding-overlay-wrapper #back-button p {
     margin-top: -2px;
     margin-left: -2px;
 }
 
-#sliding-overlay #sliding-overlay-wrapper .sliding-tabs {
+.sliding-overlay .sliding-overlay-wrapper .sliding-tabs {
     display: flex;
     font-size: 22px;
     margin-bottom: 30px;
@@ -83,12 +82,12 @@
     justify-content: space-between;
 }
 
-#sliding-overlay #sliding-overlay-wrapper .sliding-tabs .active {
+.sliding-overlay .sliding-overlay-wrapper .sliding-tabs .active {
     font-weight: 600;
     position: relative;
 }
 
-#sliding-overlay #sliding-overlay-wrapper .sliding-tabs .active::after {
+.sliding-overlay .sliding-overlay-wrapper .sliding-tabs .active::after {
     content: "";
     width: 100%;
     height: 2.5px;
@@ -99,16 +98,7 @@
     position: absolute;
 }
 
-#sliding-overlay #sliding-overlay-wrapper .tab-content p {
+.sliding-overlay .sliding-overlay-wrapper .tab-content p {
     font-size: 23px;
     font-weight: 500;
-}
-
-@keyframes translation {
-    0% {
-        transform: translateX(100vw);
-    }
-    100% {
-        transform: translateX(0);
-    }
 }
