--- a/sliding_overlay.css
+++ b/sliding_overlay.css
@@ -105,5 +105,6 @@
 
 .sliding-overlay .sliding-overlay-wrapper .tab-content p {
     font-size: 23px;
-    font-weight: 500;
+    font-weight: 600;
+    line-height: 1.35;
 }
