--- a/sliding_overlay.css
+++ b/sliding_overlay.css
@@ -75,14 +75,6 @@
     margin-left: -2px;
 }
 
-.sliding-overlay .sliding-overlay-wrapper .sliding-tabs {
-    display: flex;
-    font-size: 22px;
-    margin-bottom: 30px;
-    font-variant: small-caps;
-    justify-content: space-between;
-}
-
 .sliding-overlay .sliding-overlay-wrapper .sliding-tabs .active {
     font-weight: 600;
     position: relative;
@@ -100,11 +92,44 @@
 }
 
 .sliding-overlay .sliding-overlay-wrapper .tab-content {
+    margin-top: 25px;
     padding-bottom: 40px;
+}
+
+.sliding-overlay .sliding-overlay-wrapper .tab-content h4 {
+    font-size: 35px;
+    font-weight: 600;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
 
 .sliding-overlay .sliding-overlay-wrapper .tab-content p {
     font-size: 23px;
     font-weight: 600;
-    line-height: 1.35;
+    line-height: 1.3;
+}
+
+.sliding-overlay .sliding-overlay-wrapper .tab-content .cards {
+    margin-top: 30px;
+}
+
+.sliding-overlay .sliding-overlay-wrapper .tab-content .cards .card {
+    width: 100%;
+    height: calc(100vw * 0.9);
+    border-radius: 40px;
+    margin-bottom: 40px;
+    overflow: hidden;
+    background: #f3f3f3;
+    transition: .15s transform;
+    box-shadow: 0 1px 30px rgba(0, 0, 0, 0.25);
+}
+
+.sliding-overlay .sliding-overlay-wrapper .tab-content .cards .card:active {
+    transform: scale(0.96);
+}
+
+.sliding-overlay .sliding-overlay-wrapper .tab-content .cards .card img {
+    width: 100%;
+    margin-top: -1px;
+    height: calc(100% + 1px);
 }
