--- a/sliding_overlay.css
+++ b/sliding_overlay.css
@@ -13,6 +13,12 @@
     transform: translateX(100vw);
 }
 
+.sliding-overlay::-webkit-scrollbar {
+    opacity: 0;
+    display: none;
+    background: transparent;
+}
+
 .sliding-overlay .sliding-overlay-wrapper {
     width: 90%;
     margin-top: 23px;
